--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Scraping the Table Data</title>
+    <title>Table Scraping .</title>
 </head>
 <body>
-    <input type="text" name="input" id="x_path_input"><br>
-    <button type="submit" id="xpath_submit">Submit</button>
-    <button type="submit" id="get_data">Download Data</button>
+	<h1> Enter only the ID/Class of the table </h1>
+    <input type="text" name="input" id="x_path_input">ID/Class Table<br>
+    <input type="text" id="begin">Begin<br>
+    <input type="text" id="sheet_id">Sheet_ID<br>
+
+    <button type="submit" id="xpath_submit">Submit</button> 
+    <button type="submit" id="get_data">Download</button> 
+    
     <script src="popup.js"></script>
 </body>
 </html>
